# Experimental-Isotherm-Matching

./: .gitignore  1_convert_pdf_to_text.ipynb  2_extract_crystal_data_from_text.ipynb  README.md  get_data_from_api.py  pyproject.toml  test.py  tools.py
data/extracted_json/: 10.1002adfm.200600944.json  10.1002adfm.200800058.json  10.1002adfm.201101479.json  10.1002adma.200700450.json  10.1002anie.200462787.json  10.1002anie.200502844.json  10.1002anie.200603270.json  10.1002anie.200604306.json  10.1002anie.200604353.json  10.1002anie.200604362.json  10.1002anie.200700537.json  10.1002anie.200703086.json  10.1002anie.200705020.json  10.1002anie.200705822.json  10.1002anie.200800312.json  10.1002anie.200901964.json  10.1002anie.200902274.json  10.1002anie.200905497.json  10.1002anie.200906322.json  10.1002anie.201000989.json  10.1002anie.201002259.json  10.1002anie.201003377.json  10.1002anie.201004736.json  10.1002anie.201102329.json  10.1002anie.201105966.json  10.1002anie.201106615.json  10.1002anie.201203929.json  10.1002anie.201204806.json  10.1002anie.201302715.json  10.1002anie.201303484.json  10.1002anie.201404265.json  10.1002anie.201409334.json  10.1002anie.201504346.json  10.1002anie.201506345.json  10.1002anie.201506391.json  10.1002asia.200600317.json  10.1002asia.200900020.json  10.1002asia.201200601.json  10.1002asia.201300615.json  10.1002asia.201403123.json  (+570 more)
notebooks/: Untitled.ipynb  log.txt
src/MOFDataExtractor/agent/: agent.py
src/MOFDataExtractor/graph/: graph.py
test/: test.py
utils/: convert_pdf_to_text.py  graph_test.py
(+6 files in other folders)
