[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "MOFDataExtractor"
version = "0.1.0"
description = "An LLM agent to extract crystal data from a MOF from a paper PDF."
authors = [
    { name = "Thang Pham", email = "tpham@anl.gov" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=1.8.2",
    "langgraph>=0.2.59",
    "langchain-openai>=0.2.12,<0.3",
    "pydantic>=2.10.3",
    "pandas>=2.2",
    "jupyter>=1.0",
    "pyppeteer>=2.0.0"
    ]

[project.urls]
"Repository" = "https://github.com/tdpham2/Experimental-Isotherm-Matching"

[tool.setuptools.packages.find]
where = ["src/"]
